2016-02-23  Anders Carlsson  <andersca@apple.com>

        WKPreferences should conform to NSCoding
        https://bugs.webkit.org/show_bug.cgi?id=154597

        Reviewed by Sam Weinig.

        Add NSCoding implementation.

        * UIProcess/API/Cocoa/WKPreferences.h:
        * UIProcess/API/Cocoa/WKPreferences.mm:
        (-[WKPreferences encodeWithCoder:]):
        (-[WKPreferences initWithCoder:]):

2016-02-23  Alex Christensen  <achristensen@webkit.org>

        Implement downloads with NetworkSession
        https://bugs.webkit.org/show_bug.cgi?id=154473

        Reviewed by Brady Eidson.

        * NetworkProcess/Downloads/Download.cpp:
        (WebKit::Download::~Download):
        (WebKit::Download::didStart):
        (WebKit::Download::shouldDecodeSourceDataOfMIMEType):
        (WebKit::Download::decideDestinationWithSuggestedFilename):
        (WebKit::Download::didCreateDestination):
        * NetworkProcess/Downloads/Download.h:
        (WebKit::Download::downloadID):
        (WebKit::Download::setSandboxExtension):
        * NetworkProcess/Downloads/DownloadManager.cpp:
        (WebKit::DownloadManager::startDownload):
        (WebKit::DownloadManager::dataTaskBecameDownloadTask):
        (WebKit::DownloadManager::continueCanAuthenticateAgainstProtectionSpace):
        (WebKit::DownloadManager::continueWillSendRequest):
        (WebKit::DownloadManager::willDecidePendingDownloadDestination):
        (WebKit::DownloadManager::continueDecidePendingDownloadDestination):
        (WebKit::DownloadManager::convertHandleToDownload):
        * NetworkProcess/Downloads/DownloadManager.h:
        * NetworkProcess/NetworkDataTask.h:
        (WebKit::NetworkDataTask::clearClient):

        NetworkDataTasks can now outlive their client, so we need to make client a pointer
        with the ability to be nulled from the client's destructor.

        (WebKit::NetworkDataTask::pendingDownloadID):
        (WebKit::NetworkDataTask::pendingDownload):