@@ -1,5 +1,17 @@
 2016-02-23  Anders Carlsson  <andersca@apple.com>
 
+        WKWebViewConfiguration should conform to NSCoding
+        https://bugs.webkit.org/show_bug.cgi?id=154602
+
+        Reviewed by Beth Dakin.
+
+        * UIProcess/API/Cocoa/WKWebViewConfiguration.h:
+        * UIProcess/API/Cocoa/WKWebViewConfiguration.mm:
+        (-[WKWebViewConfiguration encodeWithCoder:]):
+        (-[WKWebViewConfiguration initWithCoder:]):
+
+2016-02-23  Anders Carlsson  <andersca@apple.com>
+
         WKPreferences should conform to NSCoding
         https://bugs.webkit.org/show_bug.cgi?id=154597
 
